<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nz.co.gsf.MainActivity" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_preferences"
        android:icon="@drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_menu_help"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_about"/>
</menu>
